--- a/app/src/main/res/layout/linearlayout.xml
+++ b/app/src/main/res/layout/linearlayout.xml
@@ -1,6 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="420dp"
+        android:layout_height="48dp"
+        android:background="@android:color/holo_blue_light"
+        android:text="Linear Layout"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+       />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:contentDescription="@Quiapo"
+        android:gravity="center_vertical|center_horizontal"
+        app:srcCompat="@drawable/quiapo" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="398dp"
+        android:layout_height="49dp"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="QUIAPO CHURCH"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Location: Quezon Blvd, Plaza Miranda Quiapo, Manila, Luzon 1014 Philippines "
+        android:textSize="18sp"
+        />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Distance from UST: 2.4 km from University of Santo Tomas"
+        android:textSize="18sp"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="121dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Back"
+            />
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="108dp"
+            android:layout_height="59dp"
+            android:layout_margin="50dp"
+            android:layout_weight="1"
+            android:text="Next"
+            />
+
+
+
+
+    </LinearLayout>
+
+
+</LinearLayout>
